--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skills",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
     "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
   },
-  "author": "Lighthouse Labs",
+  "author": "Justin Lam",
+  "url": "https://github.com/justinklam",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/justinklam/tinyapp/issues"
+  },
+  "homepage": "https://github.com/justinklam/tweeter#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
